# wildmesh

./: .gcloudignore  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  plugin.py  plugin.yaml  pyproject.toml
Formula/: wildmesh.rb
agentmesh/: __init__.py  adapters.py  client.py  config.py  plugin.py
agentmesh/hermes_plugin/: plugin.py  tools.py
docs/: OSS_MATURITY.md  RELEASING.md
docs/design/: 00-overview.md  10-threat-model.md  20-protocol.md  30-control-plane.md  40-hermes-integration.md  45-agent-agnostic-adapter-api.md  50-operations.md  60-wildaddy-identity.md
scripts/: install.sh
skill/wildmesh/: SKILL.md
skill/wildmesh/references/: usage.md
src/: api.rs  artifact.rs  cli.rs  config.rs  crypto.rs  dashboard.rs  executor.rs  lib.rs  models.rs  payment.rs  service.rs  storage.rs  swarm.rs
tests/: mesh.rs  test_adapters.py  test_client.py  test_hermes_plugin.py
