[package]
name = "wildmesh"
version = "0.2.2"
edition = "2024"
description = "Local-first peer-to-peer mesh for Hermes and other agent runtimes"
authors = ["nativ3ai"]

[lib]
name = "agentmesh"

[[bin]]
name = "wildmesh"
path = "src/bin/agentmesh.rs"

[[bin]]
name = "wildmesh-sidecar"
path = "src/bin/agentmesh-sidecar.rs"

[dependencies]
anyhow = "1.0"
axum = { version = "0.8", features = ["macros", "json"] }
base64 = "0.22"
chacha20poly1305 = { version = "0.10", features = ["std"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
clap = { version = "4.5", features = ["derive", "env"] }
crossterm = "0.29"
dirs = "6.0"
ed25519-dalek = { version = "2.2", features = ["rand_core"] }
hex = "0.4"
http = "1.3"
libp2p = { version = "0.56.0", features = ["autonat", "cbor", "dns", "ed25519", "gossipsub", "identify", "kad", "macros", "mdns", "noise", "ping", "quic", "request-response", "tcp", "tokio", "yamux", "upnp"] }
ratatui = "0.29"
rand_core = { version = "0.6", features = ["getrandom"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
sqlx = { version = "0.8", default-features = false, features = ["sqlite", "runtime-tokio-rustls", "macros"] }
tokio = { version = "1.48", features = ["full"] }
tower = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1.18", features = ["v4", "serde"] }
x25519-dalek = { version = "2.0", features = ["static_secrets", "getrandom"] }

[dev-dependencies]
tempfile = "3.23"
